--- a/main.css
+++ b/main.css
@@ -5,3 +5,25 @@ body {
 .center {
     text-align: center;
 }
+
+.box-left {
+    text-align: left;
+    position: absolute;
+    margin: 40px;
+    top: 30%;
+    width: 200px;
+    background-color: #e17787;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.box-right {
+    width: 200px;
+    position: absolute;
+    top: 30%;
+    right: 0;
+    padding: 10px;
+    margin: 40px;
+    background-color: #e17787;
+    border-radius: 10px;
+}
