--- a/main.css
+++ b/main.css
@@ -1,9 +1,15 @@
 body {
     font-family: 'Open Sans', sans-serif;
+    margin: 0px;
 }
 
 .center {
     text-align: center;
+}
+
+i {
+    position: absolute;
+    padding: 10px;
 }
 
 .box-left {
